--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <script src="https://threejs.org/build/three.min.js"></script>
   <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
   <script src="https://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
-  <script src="js/main.js"></script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
