--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </footer>
 
   <script src="https://threejs.org/build/three.min.js"></script>
-  <script src="https://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
+  <!-- <script src="https://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script> -->
   <script src="bundle.js"></script>
 </body>
 
