--- a/50-video/index.html
+++ b/50-video/index.html
@@ -36,7 +36,7 @@
 
 	<div id="ThreeJS" style="position: absolute; left:0px; top:0px"></div>
 
-	<script src="js/video.js"></script>
+	<script src="main.js"></script>
 </body>
 
 </html>
