--- a/10-zakrivljen-html/index.html
+++ b/10-zakrivljen-html/index.html
@@ -16,7 +16,7 @@
     <h1>Škola koda</h1>
   </header>
 
-  <section class="container">
+  <section class="container" id="root">
     <div id="intro" class="well text-center">
       <h1>Škola koda 3D</h1>
       <h2>Učimo narod programiranju!</h2>
@@ -80,11 +80,7 @@
     </div>
   </section>
 
-  <footer class="container">
-    <span>Ⓒ 2014 Skola koda, All Rights Reserved. </span>
-  </footer>
-
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
