--- a/15-zakrivljen-html/index.html
+++ b/15-zakrivljen-html/index.html
@@ -8,16 +8,24 @@
     <script src="../libs/OrbitControls.js"></script>
     <style>
         body {
-            margin: 0;
+          margin: 0;
         }
-
-        .large {
-            font-size: xx-large;
+        #page {
+          width: 300px;
+          height: 400px;
+          background: #eee;
+          padding: 20px;
         }
     </style>
 </head>
 
 <body>
+
+    <div id="page">
+      <h1>This is an H1 Element.</h1>
+      <h3>Hello Essential Three.js</h3>
+      <textarea> And this is a textarea</textarea>
+    </div>
 
     <script src="main.js"></script>
 </body>
