--- a/15-3d-strana/index.html
+++ b/15-3d-strana/index.html
@@ -10,21 +10,25 @@
         body {
           margin: 0;
         }
-        #page {
-          width: 300px;
-          height: 400px;
+        .page {
           background: #eee;
           padding: 20px;
+          width: 320px;
         }
     </style>
 </head>
 
 <body>
 
-    <div id="page">
-      <h1>This is an H1 Element.</h1>
-      <h3>Hello Essential Three.js</h3>
-      <textarea> And this is a textarea</textarea>
+    <div id="page" class="page">
+      <h1>Zdravo 3D strane</h1>
+      <h3>Pravimo 3D sajtove sa Three.js</h3>
+      <div>
+        <label for="">Unesi ime</label>
+        <input type="text" name="" value="">
+      </div>
+      <img src="http://lorempixel.com/300/200/" alt="">
+      <a href="http://skolakoda.org/">skolakoda</a>
     </div>
 
     <script src="main.js"></script>
