--- a/20-3d-geometrija/index.html
+++ b/20-3d-geometrija/index.html
@@ -6,9 +6,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Škola koda 3D</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/renderers/CSS3DRenderer.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js"></script>
 </head>
 
 <body>
@@ -32,50 +29,7 @@
       </div>
       <div class="col-md-6">
         <h3 class="home_what_h2">What we do</h3>
-        <div class="row">
-          <div class="col-md-6 features">
-            <span class="glyphicon glyphicon-facetime-video pull-left glyphstyle"></span>
-            <h4>Streaming solutions</h4>
-            <div class="dotted_line">
-            </div>
-            <p class="left">
-              From deployment of existing 3rd party solutions, to custom <span class="igreen">Itekako</span> streaming and delivery platforms, we provide for all of your streaming content needs.
-            </p>
-            <a href="/services/">Learn more</a>
-          </div>
-          <div class="col-md-6 features">
-            <span class="glyphicon glyphicon-globe pull-left glyphstyle"></span>
-            <h4>Enterprise  development</h4>
-            <div class="dotted_line">
-            </div>
-            <p class="left">
-              We have the right tools, expertise and experience to deliver an efficient, robust and scalable solutions that will drive your business to success.
-            </p>
-            <a href="/services/">Learn more</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 features">
-            <span class="glyphicon glyphicon-phone pull-left glyphstyle"></span>
-            <h4>Mobile development</h4>
-            <div class="dotted_line">
-            </div>
-            <p class="left">
-              Being on the frontier of mobile development since the beginning, <span class="igreen">Itekako</span> provides you with powerful, feature-rich and beautiful mobile apps for both Android and iOS platform.
-            </p>
-            <a href="/services/">Learn more</a>
-          </div>
-          <div class="col-md-6 features">
-            <span class="glyphicon glyphicon-wrench pull-left glyphstyle"></span>
-            <h4>Embedded development</h4>
-            <div class="dotted_line">
-            </div>
-            <p class="left">
-              With an expertise in a wide range of development platforms, we are able to meet all your embedded development requirements.
-            </p>
-            <a href="/services/">Learn more</a>
-          </div>
-        </div>
+        <div id="renderer"></div>
       </div>
     </div>
   </section>
@@ -84,7 +38,10 @@
     <span>Ⓒ 2014 Skola koda, All Rights Reserved. </span>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="https://rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
+  <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/renderers/CSS3DRenderer.js"></script>
+  <script src="https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
