--- a/15-3d-strana/index.html
+++ b/15-3d-strana/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <title>3D HTML</title>
-    <script src="../libs/three67.js"></script>
-    <script src="../libs/CSS3DRenderer67.js"></script>
-    <script src="../libs/OrbitControls.js"></script>
+    <script src="http://threejs.org/build/three.min.js"></script>
+    <script src="http://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
+    <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
+
     <style>
         body {
           margin: 0;
