--- a/20-3d-geometrija/index.html
+++ b/20-3d-geometrija/index.html
@@ -38,9 +38,9 @@
     <span>Ⓒ 2014 Skola koda, All Rights Reserved. </span>
   </footer>
 
-  <script src="https://rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/renderers/CSS3DRenderer.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js"></script>
+  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="http://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
+  <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
   <script src="main.js"></script>
 </body>
 
