--- a/38-frejmovi-pod/index.html
+++ b/38-frejmovi-pod/index.html
@@ -27,8 +27,11 @@
 
   <div id="renderer"></div>
 
-  <script src="https://rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/renderers/CSS3DRenderer.js"></script>
+  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="http://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
+  <!-- nove kontrole ne rade -->
+  <!-- <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script> -->
+
   <script src="../libs/OrbitControls.js" charset="utf-8"></script>
 
   <script src="main.js"></script>
