--- a/40-galerija/index.html
+++ b/40-galerija/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Animations</title>
+    <!-- ne radi sa novom verzijom -->
     <script src="../libs/three67.js"></script>
     <script src="../libs/CSS3DRenderer67.js"></script>
     <script src="../libs/OrbitControls.js"></script>
