--- a/10-zakrivljen-html/index.html
+++ b/10-zakrivljen-html/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Škola koda 3D</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/renderers/CSS3DRenderer.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js"></script>
+
+  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="http://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
+  <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
 </head>
 
 <body>
