--- a/30-frejm/index.html
+++ b/30-frejm/index.html
@@ -9,9 +9,14 @@
 
 <body>
 
+  <!-- <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
+  <script src="http://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script> -->
+
   <script src="../libs/Three58.js"></script>
+  <script src="../libs/CSS3DRenderer58.js"></script>
   <script src="../libs/OrbitControls.js"></script>
-  <script src="../libs/CSS3DRenderer.js"></script>
+
   <script src="main.js"></script>
 </body>
 
