--- a/35-frejmovi/index.html
+++ b/35-frejmovi/index.html
@@ -14,8 +14,9 @@
 
 <body>
 
-  <script src="https://rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
-  <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/renderers/CSS3DRenderer.js"></script>
+  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="http://threejs.org/examples/js/renderers/CSS3DRenderer.js"></script>
+  
   <script src="main.js"></script>
 </body>
 
