--- a/50-video/index.html
+++ b/50-video/index.html
@@ -18,8 +18,9 @@
 
 	<div id="root"></div>
 
-	<script src="../libs/Three.js"></script>
-	<script src="../libs/OrbitControls.js"></script>
+	<script src="http://threejs.org/build/three.min.js"></script>
+  <script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
+
 	<script src="main.js"></script>
 </body>
 
