--- a/38-frejmovi-pod/index.html
+++ b/38-frejmovi-pod/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Frejmovi</title>
+  <title>3D Škola koda</title>
   <style>
     body {
       margin: 0;
